[gd_scene load_steps=6 format=3 uid="uid://r0u0jyut8mm7"]

[ext_resource type="TileSet" uid="uid://bel1v8epjdcvk" path="res://assets/tilesets/lancaster.tres" id="1_1x8ac"]
[ext_resource type="Script" path="res://scripts/general.gd" id="1_3s6l3"]
[ext_resource type="Texture2D" uid="uid://cg31k2m16l4vt" path="res://assets/images/misc/button/button.png" id="2_07ia2"]
[ext_resource type="Texture2D" uid="uid://b77s5muvl2kgd" path="res://assets/images/misc/button/button_pressed.png" id="3_dnqmi"]
[ext_resource type="Texture2D" uid="uid://bf5wm0xclcrko" path="res://assets/images/misc/button/button_disabled.png" id="4_615ei"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3s6l3")

[node name="Background" type="TileMap" parent="."]
modulate = Color(0.670588, 0.670588, 0.670588, 1)
scale = Vector2(2, 2)
tile_set = ExtResource("1_1x8ac")
format = 2
layer_0/name = "Floor"
layer_0/tile_data = PackedInt32Array(1245208, 131073, 6, 1179672, 131072, 2, 1114136, 131072, 2, 1048600, 131073, 6, 983064, 131072, 2, 917528, 131073, 6, 851992, 131072, 2, 786456, 131072, 1, 720920, 327680, 3, 655384, 131072, 3, 589848, 131073, 6, 524312, 131073, 6, 458776, 131072, 2, 393240, 131072, 2, 327704, 131073, 6, 262168, 589825, 2, 196632, 131073, 6, 131096, 131073, 6, 65560, 131072, 2, 24, 131072, 2, 1245207, 131072, 2, 1179671, 131072, 2, 1114135, 131072, 2, 1048599, 131072, 2, 983063, 131073, 6, 917527, 131073, 6, 851991, 131072, 2, 786455, 131072, 1, 720919, 262144, 3, 655383, 131072, 3, 589847, 131072, 2, 524311, 131073, 6, 458775, 131073, 6, 393239, 131073, 6, 327703, 131073, 6, 262167, 131073, 6, 196631, 131072, 2, 131095, 131073, 6, 65559, 131073, 6, 23, 131073, 6, 1245206, 131072, 2, 1179670, 131072, 2, 1114134, 131073, 6, 1048598, 131073, 6, 983062, 131073, 6, 917526, 131072, 2, 851990, 131072, 2, 786454, 131072, 1, 720918, 262144, 3, 655382, 131072, 3, 589846, 131072, 2, 524310, 131073, 6, 458774, 131073, 6, 393238, 131072, 2, 327702, 131073, 6, 262166, 131072, 2, 196630, 131073, 6, 131094, 131073, 6, 65558, 131073, 6, 22, 131072, 2, 1245205, 131073, 6, 1179669, 131072, 2, 1114133, 131072, 2, 1048597, 131072, 2, 983061, 131073, 6, 917525, 131072, 2, 851989, 131073, 6, 786453, 131072, 1, 720917, 262144, 3, 655381, 131072, 3, 589845, 131073, 6, 524309, 131072, 2, 458773, 131073, 6, 393237, 131072, 2, 327701, 131073, 6, 262165, 131072, 2, 196629, 131073, 6, 131093, 131073, 6, 65557, 131072, 2, 21, 131072, 2, 1245204, 131073, 6, 1179668, 524289, 2, 1114132, 131073, 6, 1048596, 131072, 2, 983060, 131072, 2, 917524, 131072, 2, 851988, 131072, 2, 786452, 131072, 1, 720916, 393216, 2, 655380, 131072, 3, 589844, 131073, 6, 524308, 131072, 2, 458772, 131072, 2, 393236, 131072, 2, 327700, 131073, 6, 262164, 131073, 6, 196628, 131072, 2, 131092, 131072, 2, 65556, 131072, 2, 20, 131073, 6, 1245203, 65537, 6, 1179667, 65537, 6, 1114131, 65537, 6, 1048595, 65537, 6, 983059, 65537, 6, 917523, 65537, 6, 851987, 65537, 6, 786451, 65537, 6, 720915, 65537, 6, 655379, 65537, 6, 589843, 65537, 6, 524307, 65537, 6, 458771, 65537, 6, 393235, 65537, 6, 327699, 65537, 6, 262163, 65537, 6, 196627, 65537, 6, 131091, 327681, 5, 65555, 131072, 2, 19, 131072, 2, 1245202, 262145, 7, 1179666, 262145, 7, 1114130, 262145, 7, 1048594, 262145, 7, 983058, 262145, 7, 917522, 262145, 7, 851986, 262145, 7, 786450, 262145, 7, 720914, 262145, 7, 655378, 262145, 7, 589842, 262145, 7, 524306, 262145, 7, 458770, 262145, 7, 393234, 262145, 7, 327698, 262145, 7, 262162, 262145, 7, 196626, 262145, 7, 131090, 131073, 7, 65554, 589825, 1, 18, 131072, 2, 1245201, 196609, 6, 1179665, 196609, 6, 1114129, 196609, 6, 1048593, 196609, 6, 983057, 196609, 6, 917521, 196609, 6, 851985, 196609, 6, 786449, 196609, 6, 720913, 196609, 6, 655377, 196609, 6, 589841, 196609, 6, 524305, 196609, 6, 458769, 196609, 6, 393233, 196609, 6, 327697, 196609, 6, 262161, 196609, 5, 196625, 262145, 7, 131089, 131073, 7, 65553, 131072, 2, 17, 131073, 6, 1245200, 131072, 2, 1179664, 131072, 2, 1114128, 655361, 4, 1048592, 131072, 2, 983056, 131072, 2, 917520, 131072, 2, 851984, 131073, 6, 786448, 131072, 1, 720912, 393216, 1, 655376, 131072, 3, 589840, 131072, 2, 524304, 131072, 2, 458768, 131072, 2, 393232, 131072, 2, 327696, 131072, 2, 262160, 131073, 5, 196624, 262145, 7, 131088, 131073, 7, 65552, 131073, 6, 16, 131072, 2, 1245199, 131072, 2, 1179663, 131073, 6, 1114127, 131073, 6, 1048591, 655361, 4, 983055, 131073, 6, 917519, 655361, 4, 851983, 131072, 2, 786447, 131072, 1, 720911, 262144, 3, 655375, 131072, 3, 589839, 131073, 6, 524303, 131073, 6, 458767, 131073, 6, 393231, 131073, 6, 327695, 131073, 6, 262159, 131073, 5, 196623, 262145, 7, 131087, 131073, 7, 65551, 131072, 2, 15, 131073, 6, 1245198, 655361, 3, 1179662, 131073, 6, 1114126, 131072, 2, 1048590, 131072, 2, 983054, 131073, 6, 917518, 131073, 6, 851982, 131073, 6, 786446, 131072, 1, 720910, 262144, 3, 655374, 131072, 3, 589838, 131072, 2, 524302, 131072, 2, 458766, 131073, 6, 393230, 131073, 6, 327694, 720897, 2, 262158, 131073, 5, 196622, 262145, 7, 131086, 65537, 7, 65550, 65537, 6, 14, 65537, 6, 1245197, 131073, 6, 1179661, 655361, 4, 1114125, 131073, 6, 1048589, 131072, 2, 983053, 131072, 2, 917517, 131073, 6, 851981, 131072, 2, 786445, 131072, 1, 720909, 262144, 3, 655373, 131072, 3, 589837, 131072, 2, 524301, 131072, 2, 458765, 131073, 6, 393229, 131073, 6, 327693, 131073, 6, 262157, 131073, 5, 196621, 262145, 7, 131085, 262145, 7, 65549, 262145, 7, 13, 262145, 7, 1245196, 131073, 6, 1179660, 131073, 6, 1114124, 131072, 2, 1048588, 131073, 6, 983052, 131072, 2, 917516, 131072, 2, 851980, 131073, 6, 786444, 131072, 1, 720908, 262144, 3, 655372, 65536, 3, 589836, 65536, 2, 524300, 65536, 2, 458764, 65536, 2, 393228, 327680, 1, 327692, 131072, 2, 262156, 262145, 6, 196620, 196609, 6, 131084, 196609, 6, 65548, 196609, 6, 12, 196609, 6, 1245195, 655361, 2, 1179659, 131072, 2, 1114123, 131072, 2, 1048587, 131072, 2, 983051, 131072, 2, 917515, 131072, 2, 851979, 131073, 6, 786443, 131072, 1, 720907, 262144, 3, 655371, 262144, 3, 589835, 262144, 3, 524299, 262144, 3, 458763, 262144, 3, 393227, 131072, 3, 327691, 131072, 2, 262155, 131072, 2, 196619, 655361, 3, 131083, 131073, 6, 65547, 131072, 2, 11, 131073, 6, 1245194, 131072, 2, 1179658, 131073, 6, 1114122, 131072, 2, 1048586, 131072, 2, 983050, 131073, 6, 917514, 655361, 4, 851978, 131073, 6, 786442, 262144, 2, 720906, 196608, 2, 655370, 196608, 2, 589834, 196608, 2, 524298, 196608, 1, 458762, 262144, 3, 393226, 131072, 3, 327690, 131072, 2, 262154, 131072, 2, 196618, 131072, 2, 131082, 655361, 1, 65546, 131072, 2, 10, 131073, 6, 1245193, 131072, 2, 1179657, 131073, 6, 1114121, 131072, 2, 1048585, 131073, 6, 983049, 131073, 6, 917513, 131073, 6, 851977, 131072, 2, 786441, 131072, 2, 720905, 131072, 2, 655369, 131072, 2, 589833, 131072, 2, 524297, 131072, 1, 458761, 262144, 3, 393225, 131072, 3, 327689, 131073, 6, 262153, 131073, 6, 196617, 131072, 2, 131081, 655361, 2, 65545, 131073, 6, 9, 131072, 2, 1245192, 131072, 2, 1179656, 131072, 2, 1114120, 131072, 2, 1048584, 131073, 6, 983048, 131073, 6, 917512, 131073, 6, 851976, 131073, 6, 786440, 131073, 6, 720904, 131073, 6, 655368, 131073, 6, 589832, 589825, 1, 524296, 131072, 1, 458760, 393216, 2, 393224, 131072, 3, 327688, 131073, 6, 262152, 131072, 2, 196616, 131073, 6, 131080, 131072, 2, 65544, 131073, 6, 8, 131072, 2, 1245191, 131073, 6, 1179655, 131073, 6, 1114119, 131072, 2, 1048583, 131072, 2, 983047, 131072, 2, 917511, 131073, 6, 851975, 131073, 6, 786439, 131073, 6, 720903, 131073, 6, 655367, 131072, 2, 589831, 131072, 2, 524295, 131072, 1, 458759, 262144, 3, 393223, 131072, 3, 327687, 131072, 2, 262151, 131073, 6, 196615, 131072, 2, 131079, 131072, 2, 65543, 131073, 6, 7, 131073, 6, 1245190, 131073, 6, 1179654, 131072, 2, 1114118, 131073, 6, 1048582, 131072, 2, 983046, 131072, 2, 917510, 131072, 2, 851974, 131073, 6, 786438, 131072, 2, 720902, 131073, 6, 655366, 131072, 2, 589830, 131072, 2, 524294, 131072, 1, 458758, 262144, 3, 393222, 131072, 3, 327686, 131073, 6, 262150, 131072, 2, 196614, 131072, 2, 131078, 131073, 6, 65542, 131072, 2, 6, 131072, 2, 1245189, 131072, 2, 1179653, 131072, 2, 1114117, 131072, 2, 1048581, 131073, 6, 983045, 131072, 2, 917509, 131072, 2, 851973, 131072, 2, 786437, 131073, 6, 720901, 131073, 6, 655365, 131073, 6, 589829, 131072, 2, 524293, 131072, 1, 458757, 262144, 3, 393221, 131072, 3, 327685, 131073, 6, 262149, 131073, 6, 196613, 720897, 2, 131077, 131073, 6, 65541, 131072, 2, 5, 131072, 2, 1245188, 131073, 6, 1179652, 131073, 6, 1114116, 131073, 6, 1048580, 131073, 6, 983044, 131072, 2, 917508, 131072, 2, 851972, 131072, 2, 786436, 131073, 6, 720900, 131072, 2, 655364, 131072, 2, 589828, 131073, 6, 524292, 131072, 1, 458756, 262144, 3, 393220, 131072, 3, 327684, 131072, 2, 262148, 131072, 2, 196612, 131072, 2, 131076, 131073, 6, 65540, 131072, 2, 4, 131073, 6, 1245187, 131072, 2, 1179651, 131072, 2, 1114115, 131072, 2, 1048579, 131072, 2, 983043, 131072, 2, 917507, 131073, 6, 851971, 131072, 2, 786435, 131073, 6, 720899, 131073, 6, 655363, 131072, 2, 589827, 131073, 6, 524291, 131072, 1, 458755, 262144, 3, 393219, 131072, 3, 327683, 131073, 6, 262147, 720897, 4, 196611, 131073, 6, 131075, 131073, 6, 65539, 131073, 6, 3, 131072, 2, 1245186, 131072, 2, 1179650, 131073, 6, 1114114, 131073, 6, 1048578, 131073, 6, 983042, 131073, 6, 917506, 131072, 2, 851970, 131073, 6, 786434, 131073, 6, 720898, 131072, 2, 655362, 131072, 2, 589826, 655361, 1, 524290, 131072, 1, 458754, 262144, 3, 393218, 131072, 3, 327682, 131072, 2, 262146, 131073, 6, 196610, 131073, 6, 131074, 131072, 2, 65538, 131072, 2, 2, 131072, 2, 1245185, 131072, 2, 1179649, 131073, 6, 1114113, 131072, 2, 1048577, 131072, 2, 983041, 131073, 6, 917505, 131073, 6, 851969, 131073, 6, 786433, 131072, 2, 720897, 131072, 2, 655361, 131072, 2, 589825, 131072, 2, 524289, 131072, 1, 458753, 262144, 3, 393217, 131072, 3, 327681, 131072, 2, 262145, 131073, 6, 196609, 131073, 6, 131073, 131073, 6, 65537, 131073, 6, 1, 131072, 2, 1245184, 131073, 6, 1179648, 131073, 6, 1114112, 131072, 2, 1048576, 131072, 2, 983040, 131072, 2, 917504, 131072, 2, 851968, 131072, 2, 786432, 131073, 6, 720896, 131073, 6, 655360, 131073, 6, 589824, 131073, 6, 524288, 131072, 1, 458752, 393216, 1, 393216, 131072, 3, 327680, 131072, 2, 262144, 131072, 2, 196608, 131072, 2, 131072, 131072, 2, 65536, 131072, 2, 0, 131073, 6)
layer_1/name = "Obj"
layer_1/tile_data = PackedInt32Array(655376, 589826, 1, 720912, 589826, 2, 786448, 589826, 3, 655380, 655362, 1, 720916, 655362, 2, 786452, 655362, 3, 655377, 327682, 1, 720913, 327682, 2, 786449, 327682, 3, 655378, 393218, 1, 720914, 393218, 2, 786450, 393218, 3, 655379, 262146, 1, 720915, 262146, 2, 786451, 262146, 3, 196613, 65539, 2)

[node name="StartGameButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 336.0
offset_right = 460.0
offset_bottom = 384.0
tooltip_text = "START GAME"
texture_normal = ExtResource("2_07ia2")
texture_pressed = ExtResource("3_dnqmi")
texture_hover = ExtResource("3_dnqmi")
stretch_mode = 0
script = ExtResource("1_3s6l3")

[node name="StartText" type="Label" parent="StartGameButton2"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 48.0
text = "Start Game
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadGameButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 448.0
offset_right = 460.0
offset_bottom = 496.0
disabled = true
texture_normal = ExtResource("2_07ia2")
texture_pressed = ExtResource("3_dnqmi")
texture_hover = ExtResource("3_dnqmi")
texture_disabled = ExtResource("4_615ei")
stretch_mode = 0
script = ExtResource("1_3s6l3")

[node name="LoadText" type="Label" parent="LoadGameButton"]
layout_mode = 0
offset_right = 119.0
offset_bottom = 48.0
text = "Load Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 340.0
offset_top = 552.0
offset_right = 460.0
offset_bottom = 600.0
texture_normal = ExtResource("2_07ia2")
texture_pressed = ExtResource("3_dnqmi")
texture_hover = ExtResource("3_dnqmi")
stretch_mode = 0
script = ExtResource("1_3s6l3")

[node name="QuitText" type="Label" parent="QuitButton"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 48.0
text = "Quit Game"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_group_ = true

[connection signal="pressed" from="StartGameButton2" to="." method="startGame"]
[connection signal="pressed" from="LoadGameButton" to="." method="loadGame"]
[connection signal="pressed" from="QuitButton" to="QuitButton" method="quitGame"]
